test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/switch_void.plx
#  Can't use void controlling expression in switch statement
pub fn f(none) none {
    return none
}

pub fn main(none) i32 {
    match f() {
        otherwise {
            return nil
        }
    }
}
